--- a/package.json
+++ b/package.json
@@ -4,8 +4,30 @@
   "description": "Inbox app to manage contact messages from StudioYosepRA apps.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/app.js",
+    "dev": "nodemon -e js -w . -w .env ./src/app.js"
   },
   "author": "Yosep Ryan Agusta",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.1",
+    "module-alias": "^2.2.3",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin-js": "^2.10.1",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3"
+  },
+  "_moduleAliases": {
+    "@Root": ".",
+    "@Features": "./src/features"
+  }
 }
