--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
+    "@faker-js/faker": "^9.2.0",
     "@stylistic/eslint-plugin-js": "^2.10.1",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
