--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yosep Ryan Agusta",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "module-alias": "^2.2.3",
